[package]
name = "libsqlite3-sys"
version = "0.19.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
repository = "https://github.com/jgallagher/rusqlite"
description = "Native bindings to the libsqlite3 library"
license = "MIT"
#links = "c"
build = "build.rs"
[lib]

[features]

[dependencies]
#libc-sys = {path="../libc-sys"}

[build-dependencies]
cc = "1.0.50"
#bindgen={ version = "0.53.2", default-features = false, features = ["static"] }

