[package]
name = "rusqlite"
version = "0.21.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
edition = "2018"
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/jgallagher/rusqlite"
documentation = "http://docs.rs/rusqlite/"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"
categories = ["database"]

[badges]
travis-ci = { repository = "jgallagher/rusqlite" }
appveyor = { repository = "jgallagher/rusqlite" }
maintenance = { status = "actively-developed" }

[lib]
name = "rusqlite"



[features]
load_extension = []

# sqlite3_blob_reopen: 3.7.4
blob = []
collation = []
# sqlite3_create_function_v2: 3.7.3 (2010-10-08)
functions = []
# sqlite3_log: 3.6.23 (2010-03-09)
trace = []
limits = []
hooks = []
i128_blob = ["byteorder"]
sqlcipher = []
# xSavepoint, xRelease and xRollbackTo: 3.7.7 (2011-06-23)
vtab = [ "lazy_static"]
# xShadowName: 3.26.0
vtab_v3 = ["vtab"]
csvtab = ["csv", "vtab"]
# pointer passing interfaces: 3.20.0
array = ["vtab"]
# window functions: 3.25.0
window = ["functions"]
# 3.9.0
series = ["vtab"]
# check for invalid query.
extra_check = []
unstable = []

[dependencies]
time = "0.1.0"
bitflags = "1.0"
lru-cache = "0.1"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.0", optional = true }
url = { version = "2.0", optional = true }
lazy_static = { version = "1.0", optional = true }
byteorder = { version = "1.2", features = ["i128"], optional = true }
fallible-iterator = "0.2"
fallible-streaming-iterator = "0.1"
memchr = "2.2.0"
uuid = { version = "0.8", optional = true }
wasm-bindgen = "0.2.59"
libc-sys = { path = "../libc-sys" }

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1.0"
lazy_static = "1.0"
regex = "1.0"
uuid = { version = "0.8", features = ["v4"] }
unicase = "2.4.0"
wasm-bindgen-test = "0.3.10"

[dependencies.libsqlite3-sys]
path = "../libsqlite3-sys"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"

[[test]]
name = "vtab"

[package.metadata.docs.rs]
features = [ "backup", "blob", "chrono", "collation", "functions", "limits", "load_extension", "serde_json", "trace", "url", "vtab", "window", "modern_sqlite" ]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.playground]
features = ["array", "backup", "blob", "chrono", "collation", "csvtab", "extra_check", "functions", "hooks", "i128_blob", "limits", "load_extension", "modern_sqlite", "serde_json", "series", "trace", "url", "vtab_v3", "vtab", "window"]
all-features = false
