[package]
name = "wasm_println"
version = "0.1.0"
authors = ["nullrocket <douglas.b.hill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.59"
[dependencies.web-sys]
version= "0.3.37"
features = ["console"]
